--- a/src/common/NavBar/HorizontalNavBar/styles.less
+++ b/src/common/NavBar/HorizontalNavBar/styles.less
@@ -42,7 +42,7 @@
     }
 
     .back-button-container {
-        margin-left: ~"max(0px, calc(1rem - var(--safe-area-inset-left, 0px)))";
+        margin-left: ~"calc(max(0px, calc(1rem - var(--safe-area-inset-left, 0px))))";
     }
 
     .title {
