--- a/src/routes/MetaDetails/styles.less
+++ b/src/routes/MetaDetails/styles.less
@@ -116,7 +116,7 @@
             align-self: stretch;
             padding: 0 4rem 2rem 4rem;
 
-            padding-left: ~"max(1rem, calc(4rem - var(--safe-area-inset-left, 0px)))";
+            padding-left: ~"calc(max(1rem, calc(4rem - var(--safe-area-inset-left, 0px))))";
         }
 
         .spacing {
