--- a/src/routes/Player/ControlBar/styles.less
+++ b/src/routes/Player/ControlBar/styles.less
@@ -4,8 +4,8 @@
 @import (reference) '~stremio/common/screen-sizes.less';
 
 .control-bar-container {
-    padding-left: ~"max(1.5rem, var(--safe-area-inset-left, 0px))";
-    padding-right: ~"max(1.5rem, var(--safe-area-inset-right, 0px))";
+    padding-left: ~"calc(max(1.5rem, var(--safe-area-inset-left, 0px)))";
+    padding-right: ~"calc(max(1.5rem, var(--safe-area-inset-right, 0px)))";
 
     .seek-bar {
         --track-size: 0.5rem;
