--- a/src/routes/Player/styles.less
+++ b/src/routes/Player/styles.less
@@ -56,7 +56,7 @@ html:not(.active-slider-within) {
             background: transparent;
             overflow: visible;
             padding-left: var(--safe-area-inset-left, 0px);
-            padding-right: ~"max(1rem, var(--safe-area-inset-right, 0px))";
+            padding-right: ~"calc(max(1rem, var(--safe-area-inset-right, 0px)))";
 
             &::before {
                 position: absolute;
